<resources>
    <string name="format_date_time" translatable="false">dd/MM/yyyy hh:mm a</string>
    <string name="format_date" translatable="false">dd/MM/yyyy</string>
    <string name="format_time" translatable="false">hh:mm:ss a</string>

    <string name="app_name">NewAI OCR</string>
    <string name="activity_gallery">Thư viện ảnh</string>
    <string name="activity_file">Thư viện tập tin</string>
    <string name="activity_setting">Cài đặt</string>

    <string name="drawer_open">Mở menu trái</string>
    <string name="drawer_close">Đóng menu trái</string>

    <string name="permission_rationale_read_external_storage">Ứng dụng cần truy xuất dữ liệu để thực hiện OCR. Vui lòng cấp quyền trong Cài đặt.</string>
    <string name="permission_rationale_camera">Ứng dụng cần truy xuất Camera để chụp hình. Vui lòng cấp quyền trong Cài đặt.</string>

    <string name="err_list_image_null">Danh sách hình rỗng</string>
    <string name="err_permission_denied">Quyền truy cập bị từ chối</string>
    <string name="err_send_server">Tiến trình xử lý gặp lỗi, vui lòng thử lại sau</string>
    <string name="err_cancel_send_server">Đã huỷ tiến trình xử lý</string>
    <string name="err_file_too_large">Tập tin lớn hơn mức quy định, tối đa là 5MB</string>

    <string name="success_send_server">Đã xử lý, kết quả sẽ được gửi về email trong ít phút nữa</string>

    <string name="info_sending_server">Đang xử lý, vui lòng đợi…</string>

    <string name="guide_scroll_down">Kéo xuống để tải lại</string>
    <string name="guide_user_email">Vui lòng nhập địa chỉ email để nhận kết quả</string>

    <string name="dialog_ocr_file">Thực hiện OCR tập tin</string>
    <string name="dialog_sorry_inconvenience">Xin lỗi vì sự bất tiện này!</string>

    <string name="btn_system_setting">Cài đặt</string>
    <string name="btn_exit_app">Thoát</string>
    <string name="btn_dismiss">Ẩn</string>
    <string name="btn_undo">Hoàn tác</string>
    <string name="btn_ok">Đồng ý</string>
    <string name="btn_cancel">Huỷ</string>
    <string name="btn_yes">Đồng ý</string>
    <string name="btn_no">Không</string>
    <string name="btn_close">Đóng</string>

    <string name="upload_notification_title">Đang xử lý OCR</string>
    <string name="upload_notification_error">Lỗi trong quá trình xử lý</string>
    <string name="upload_notification_cancelled">Tiến trình bị huỷ</string>
    <string name="upload_notification_completed">Tiến trình hoàn thành</string>

    <string name="lang_eng" translatable="false">English</string>
    <string name="lang_vie" translatable="false">Tiếng Việt</string>
    <string name="lang_value_eng" translatable="false">eng</string>
    <string name="lang_value_vie" translatable="false">vie</string>

    <string name="output_format_html" translatable="false">HTML (.html)</string>
    <string name="output_format_value_html" translatable="false">html</string>
    <string name="output_format_word" translatable="false">Microsoft Word (.docx)</string>
    <string name="output_format_value_word" translatable="false">word</string>
    <string name="output_format_excel" translatable="false">Microsoft Excel (.xlsx)</string>
    <string name="output_format_value_excel" translatable="false">excel</string>

    <string name="preference_email_title">Email nhận kết quả OCR</string>
    <string name="preference_email_summary">Địa chỉ mail để nhận kết quả OCR</string>
    <string name="preference_lang_title">Ngôn ngữ OCR</string>
    <string name="preference_lang_summary">Chọn ngôn ngữ để OCR tập tin hoặc ảnh</string>
    <string name="preference_output_format_title">Định dạng tập tin kết quả</string>
    <string name="preference_output_format_summary">Chọn định dạng tập tin kết quả OCR</string>
    <string name="preference_output_group">KẾT QUẢ</string>
    <string name="preference_output_original_title">Giữ cấu trúc văn bản (Beta)</string>
    <string name="preference_output_original_summary">Kết quả có cấu trúc như hình ban đầu</string>
</resources>
