<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="settingTxtEmail"
        android:summary="@string/preference_email_summary"
        android:title="@string/preference_email_title" />
    <ListPreference
        android:key="settingListLang"
        android:summary="@string/preference_lang_summary"
        android:title="@string/preference_lang_title" />

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/preference_output_group">
        <ListPreference
            android:key="settingListOutputFormat"
            android:summary="@string/preference_output_format_summary"
            android:title="@string/preference_output_format_title" />
        <SwitchPreference
            android:key="settingSwitchOriginalFormat"
            android:summary="@string/preference_output_original_summary"
            android:title="@string/preference_output_original_title" />
    </PreferenceCategory>

</PreferenceScreen>